--- a/client/app/modules/challenge/templates/challenge.tpl.html
+++ b/client/app/modules/challenge/templates/challenge.tpl.html
@@ -4,11 +4,25 @@
             <h1>
                 {{ challenge.title }}
             </h1>
-            <h3>{{challenge.brief}}</h3>
         </div>
+
+        <div ng-if="isFollow">
+            <i class="fa fa-star baseColor"></i> Following
+        </div>
+
+        <material-button class="material-button-fab" ng-click="toggleLeft()" style="bottom:-24px;position:absolute; left:20px;z-index : inherit" hide-md>
+            <i class="fa fa-bars"></i>
+        </material-button>
+        <material-button class="material-button-fab" ng-click="follow()" style="position:absolute; right:20px; z-index: inherit" ng-if="!isOwner">
+            <i class="fa" ng-class="{ 'fa-thumbs-up' : !isFollow, 'fa-thumbs-down' : isFollow }"></i>
+        </material-button>
     </material-toolbar>
 
-    <img ng-if="challenge.banner" src="{{ challenge.banner }}" style="margin: auto;">
+    <h3>{{ challenge.brief }}</h3>
+
+    <div layout="horizontal" layout-align="center center">
+        <img ng-if="challenge.banner" src="{{ challenge.banner }}" >
+    </div>
 
     <div layout="vertical">
         <material-button ui-sref="challengeAdmin({ cid : challenge._id })" ng-if="isOwner">
@@ -31,17 +45,6 @@
                 </span>
             </div>
         </div>
-
-        <div ng-if="isFollow">
-            <i class="fa fa-star baseColor"></i> Following
-        </div>
-
-        <material-button class="material-button-fab" ng-click="toggleLeft()" style="bottom:-24px;position:absolute; left:20px;z-index : inherit" hide-md>
-            <i class="fa fa-bars"></i>
-        </material-button>
-        <material-button class="material-button-fab" ng-click="follow()" style="position:absolute; right:20px; z-index: inherit" ng-if="!isOwner">
-            <i class="fa" ng-class="{ 'fa-thumbs-up' : !isFollow, 'fa-thumbs-down' : isFollow }"></i>
-        </material-button>
     </div>
 
     <div flex>
