--- a/client/app/modules/notes/templates/show-notes.tpl.html
+++ b/client/app/modules/notes/templates/show-notes.tpl.html
@@ -1,23 +1,23 @@
 <section>
-    <h2>Publications</h2>
-    <material-button ng-if="canPostNote()" ng-click="popUpNewNote()">Post new publication</material-button>
+    <h2>Notes</h2>
+    <material-button ng-if="canPostNote()" ng-click="popUpNewNote()"><i class="fa fa-pencil-square"></i> Post new note</material-button>
 
     <article ng-repeat="note in notes">
         <p class="note-info">Note posted by {{ note.owner.username }} on {{ note.createDate | date: "medium" }}</p>
-        <material-button ng-if="canDeleteNote(note)" ng-click="deleteNote(note)">Delete Note</material-button>
+        <material-button ng-if="canDeleteNote(note)" ng-click="deleteNote(note)"><i class="fa fa-times"></i> Delete Note</material-button>
         <p ng-bind-html="note.text"></p>
 
         <div flex offset="10">
             <h3>Comments</h3>
             <article ng-repeat="comment in note.comments">
                 <p class="note-info">Comment posted by {{ note.owner.username }} on {{ comment.createDate | date: "medium" }}</p>
-                <material-button ng-if="canDeleteComment(note, comment)" ng-click="deleteComment(note, comment)">Delete Comment</material-button>
+                <material-button ng-if="canDeleteComment(note, comment)" ng-click="deleteComment(note, comment)"><i class="fa fa-times"></i> Delete Comment</material-button>
                 <p ng-bind-html="comment.text | linky" class="show-line-breaks"></p>
             </article>
 
             <form ng-if="canPostComment(note)" name="commentForm" ng-submit="postComment(note)">
                 <textarea name="comment" class="pretty-area" rows="2" required ng-model="note.newComment" placeholder="Your comment here ..."></textarea>
-                <material-button type="submit" ng-disabled="commentForm.$invalid" style="width:100%;">Send</material-button>
+                <material-button type="submit" ng-disabled="commentForm.$invalid" style="width:100%;"><i class="fa fa-save"></i> Send</material-button>
             </form> 
         </div>
     </article>
