--- a/client/app/modules/project/templates/project.tpl.html
+++ b/client/app/modules/project/templates/project.tpl.html
@@ -15,7 +15,7 @@
         </material-button>
     </material-toolbar>
 
-    <h3>{{ project.brief }}</h3>
+    <h3 class="show-line-breaks">{{ project.brief }}</h3>
 
     <div layout="horizontal" layout-align="center center">
         <img ng-if="project.banner" src="{{ project.banner }}" />
