--- a/client/app/modules/challenge/templates/challenge.tpl.html
+++ b/client/app/modules/challenge/templates/challenge.tpl.html
@@ -18,7 +18,7 @@
         </material-button>
     </material-toolbar>
 
-    <h3>{{ challenge.brief }}</h3>
+    <h3 class="show-line-breaks">{{ challenge.brief }}</h3>
 
     <div layout="horizontal" layout-align="center center">
         <img ng-if="challenge.banner" src="{{ challenge.banner }}" >
