--- a/client/app/modules/header/templates/searchBar.tpl.html
+++ b/client/app/modules/header/templates/searchBar.tpl.html
@@ -8,7 +8,7 @@
     <ui-select-choices repeat="result in searchResult track by $index"
                        refresh="refreshSearchBar($select.search)"
                        refresh-delay="0">
-        <material-divider ng-if="result.separator" style="text-align: center;" ng-class="{ 'material-theme-green' : result.separator == 'Users', 'material-theme-indigo' : result.separator == 'Challenges', 'material-theme-light' : result.separator == 'Projects' }">{{ result.separator }}</material-divider>
+        <material-divider ng-if="result.separator" style="text-align: center;" ng-class="{ 'material-theme-green' : result.separator == 'Users', 'material-theme-indigo' : result.separator == 'Challenges', 'material-theme-light' : result.separator == 'Projects' : result.separator == 'Ideas' }">{{ result.separator }}</material-divider>
         <material-item ng-if="!result.separator" class="result-item" ng-click="goTo(result)">
             <material-item-content>
                 <div class="material-tile-left">
