WIP: moving from hackpad to etherpad

--- a/client/app/modules/workspace/templates/hackpad.tpl.html
+++ b/client/app/modules/workspace/templates/hackpad.tpl.html
@@ -1,1 +1,1 @@
-<hackpad current-user="currentUser" pad-id="padId"></hackpad>
+<hackpad current-user="currentUser" project="project" flex></hackpad>
