--- a/client/app/modules/workspace/templates/notes.tpl.html
+++ b/client/app/modules/workspace/templates/notes.tpl.html
@@ -24,6 +24,6 @@
     </div>
 </material-toolbar>
 
-<material-content >
-    <section ui-view="noteDetailsView" style="width:100%; height: 90%;" ></section>
+<material-content flex>
+    <section ui-view="noteDetailsView" flex></section>
 </material-content>
