--- a/client/app/styles/main.scss
+++ b/client/app/styles/main.scss
@@ -25,6 +25,7 @@ $baseColor : rgb(0, 51, 102);
 @import "../modules/d3/sass/d3";
 @import "../modules/admin/challenge/sass/adminChallenge";
 @import "../modules/admin/profile/sass/adminProfile";
+@import "../modules/hackpad/sass/etherpad";
 
 
 body,html{
