--- a/client/app/modules/hackpad/templates/hackpad.tpl.html
+++ b/client/app/modules/hackpad/templates/hackpad.tpl.html
@@ -1,1 +1,1 @@
-<iframe src="{{ url }}" ng-bind-html="data" style='border:0px; width:100%; height:100%; min-height: 550px;'></iframe>
+<iframe src="{{ url }}" class="etherpad-frame" flex height="300"></iframe>
