--- a/client/app/modules/workspace/templates/hackpad.tpl.html
+++ b/client/app/modules/workspace/templates/hackpad.tpl.html
@@ -1,1 +1,1 @@
-<hackpad current-user="currentUser" project="project" flex></hackpad>
+<hackpad user="currentUser" project-id="project._id" flex></hackpad>
