--- a/client/app/modules/workspace/templates/notes.tpl.html
+++ b/client/app/modules/workspace/templates/notes.tpl.html
@@ -5,7 +5,7 @@
         </div>
         <material-tabs center selected="selectedTabIndex">
             {{ note.title }}
-            <material-tab ui-sref="workspace.hackpad">
+            <material-tab ui-sref="workspace.etherpad">
                 <material-label>
                     <i class='fa fa-trello fa-2x'></i>
                 </material-label>
