Can link ideas to projects and challenges

--- a/client/app/styles/main.scss
+++ b/client/app/styles/main.scss
@@ -73,4 +73,9 @@ header{
   margin-left: 10px;
 }
 
+.select-poster-image {
+  width: 25px;
+  height: 25px;
+}
+
 @import "../modules/common/sass/media-queries";
