--- a/client/app/modules/idea/templates/idea.tpl.html
+++ b/client/app/modules/idea/templates/idea.tpl.html
@@ -18,47 +18,94 @@
         </material-button>
     </material-toolbar>
 
-    <h3 class="show-line-breaks">{{ idea.brief }}</h3>
+    <div flex>
+        <h3 class="show-line-breaks">{{ idea.brief }}</h3>
 
-    <div layout="vertical">
-        <material-button ui-sref="editIdea({ iid : idea._id })" ng-if="isOwner">
-            <i class="fa fa-pencil-square-o baseColor"></i> Edit
-        </material-button>
+        <div layout="vertical">
+            <material-button ui-sref="editIdea({ iid : idea._id })" ng-if="isOwner">
+                <i class="fa fa-pencil-square-o baseColor"></i> Edit
+            </material-button>
 
-        <div layout="horizontal">
-            <div>
-                <span>
-                    {{ idea.followers.length }}
-                </span>
-                <span class="text-muted">
-                    &nbsp;followers
-                </span>
-                <span>
-                    {{ idea.challenges.length }}
-                </span>
-                <span class="text-muted">
-                    &nbsp;challenges
-                </span>
-                <span>
-                    {{ idea.projects.length }}
-                </span>
-                <span class="text-muted">
-                    &nbsp;projects
-                </span>
+            <div layout="horizontal">
+                <div>
+                    <span>
+                        {{ idea.followers.length }}
+                    </span>
+                    <span class="text-muted">
+                        &nbsp;followers
+                    </span>
+                    <span>
+                        {{ idea.challenges.length }}
+                    </span>
+                    <span class="text-muted">
+                        &nbsp;challenges
+                    </span>
+                    <span>
+                        {{ idea.projects.length }}
+                    </span>
+                    <span class="text-muted">
+                        &nbsp;projects
+                    </span>
+                </div>
             </div>
         </div>
-    </div>
 
-    <div flex>
-        <showtags entity="idea"></showtags>
+        <div layout="vertical">
+            <showtags entity="idea"></showtags>
 
-        <list-notes idea="idea" current-user="currentUser"></list-notes>
+            <list-notes idea="idea" current-user="currentUser"></list-notes>
+        </div>
 
-        <section>
-            <challenge-card inline-block challenge-id="project" ng-repeat="challenge in idea.challenges"></project-card>
-        </section>
-        <section>
-            <project-card inline-block project-id="project" ng-repeat="project in idea.projects"></project-card>
-        </section>
+        <div flex>
+            <h3>Related Projects</h3>
+
+            <div layout="horizontal">
+                <div ng-repeat="project in idea.projects" layout="vertical">
+                    <project-card inline-block project-id="project"></project-card>
+                    <material-button ng-click="removeLinkToProject(project)">
+                        <i class="fa fa-times baseColor"></i> Remove Project
+                    </material-button>
+                </div>
+            </div>
+
+            <ui-select ng-model="newLink.project" theme="selectize">
+                <ui-select-match placeholder="A related project...">{{$select.selected.title}}</ui-select-match>
+                <ui-select-choices repeat="project in projects">
+                    <img ng-src="{{ project.poster || '/images/placeholder25x25.png' }}" class="select-poster-image"/>
+                    <small>
+                        {{project.title}}
+                    </small>
+                </ui-select-choices>
+            </ui-select>
+
+            <material-button ng-click="addLinkToProject()">
+                <i class="fa fa-plus baseColor"></i> Add Project
+            </material-button>
+
+            <h3>Related Challenges</h3>
+
+            <div layout="horizontal">
+                <div ng-repeat="challenge in idea.challenges" layout="vertical">
+                    <challenge-card inline-block challenge-id="challenge"></challenge-card>
+                    <material-button ng-click="removeLinkToChallenge(challenge)">
+                        <i class="fa fa-times baseColor"></i> Remove Challenge
+                    </material-button>
+                </div>
+            </div>
+
+            <ui-select ng-model="newLink.challenge" theme="selectize">
+                <ui-select-match placeholder="A related challenge...">{{$select.selected.title}}</ui-select-match>
+                <ui-select-choices repeat="challenge in challenges">
+                    <img ng-src="{{ challenge.poster || '/images/placeholder25x25.png' }}" class="select-poster-image"/>
+                    <small>
+                        {{challenge.title}}
+                    </small>
+                </ui-select-choices>
+            </ui-select>
+
+            <material-button ng-click="addLinkToChallenge()">
+                <i class="fa fa-plus baseColor"></i> Add Challenge
+            </material-button>
+        </div>
     </div>
 </material-content>
