Easier to cancel edit project home page

--- a/client/app/modules/admin/project/templates/modal/homePageModal.tpl.html
+++ b/client/app/modules/admin/project/templates/modal/homePageModal.tpl.html
@@ -5,8 +5,8 @@
             <material-button ng-click="update(newProject)" class="material-button-fab">
                 <i class="fa fa-save"></i>
             </material-button>
-            <material-button class="material-button-fab">
-                <i class="fa fa-times" ng-click="cancel()"></i>
+            <material-button class="material-button-fab" ng-click="cancel()">
+                <i class="fa fa-times"></i>
             </material-button>
         </div>
     </material-toolbar>
