--- a/client/app/modules/profile/templates/profile.tpl.html
+++ b/client/app/modules/profile/templates/profile.tpl.html
@@ -19,6 +19,76 @@
         <h3>Presentation</h3>
         <div ng-bind-html="profile.secureBrief"></div>
 
+        <h3>Contributions</h3>
+        <div ng-if="moreData.challenges.length > 0">
+            <div>
+                <img src="images/svg/challenges.svg"> Created Challenges
+            </div>
+
+            <div>
+                <challenge-card ng-repeat="challenge in moreData.challenges" admin="true" challenge-id="challenge._id" inline-block></challenge-card>
+            </div>
+        </div>
+
+        <div ng-if="moreData.followedChallenges.length > 0">
+            <div>
+                <img src="images/svg/challenges.svg"> Following Challenges
+            </div>
+
+            <div>
+                <challenge-card ng-repeat="challenge in moreData.followedChallenges" challenge-id="challenge._id" inline-block></challenge-card>
+            </div>
+        </div>
+
+        <div ng-if="moreData.projects.length > 0">
+            <div>
+                <i class="fa fa-rocket fa-2x baseColor"></i> Created Projects
+            </div>
+
+            <div>
+                <project-card ng-repeat="project in moreData.projects" admin="true" project-id="project._id" inline-block></project-card>
+            </div>
+        </div>
+
+        <div ng-if="moreData.memberProjects.length > 0">
+            <div>
+                <i class="fa fa-rocket fa-2x baseColor"></i> Contributing to Projects
+            </div>
+
+            <div>
+                <project-card ng-repeat="project in moreData.memberProjects" project-id="project._id" inline-block></project-card>
+            </div>
+        </div>
+
+        <div ng-if="moreData.followedProjects.length > 0">
+            <div>
+                <i class="fa fa-rocket fa-2x baseColor"></i> Following Projects
+            </div>
+
+            <div>
+                <project-card ng-repeat="project in moreData.followedProjects" project-id="project._id" inline-block></project-card>
+            </div>
+        </div>
+
+        <div ng-if="moreData.ideas.length > 0">
+            <div>
+                <img src="images/svg/ideas.svg"> Created Ideas
+            </div>
+
+            <div>
+                <idea-card ng-repeat="idea in moreData.ideas" idea-id="idea._id" inline-block></idea-card>
+            </div>
+        </div>
+
+        <div ng-if="moreData.followedIdeas.length > 0">
+            <div>
+                <img src="images/svg/ideas.svg"> Following Ideas
+            </div>
+
+            <div>
+                <idea-card ng-repeat="idea in moreData.followedIdeas" idea-id="idea._id" inline-block></idea-card>
+            </div>
+        </div>
 
         <h3>Activity</h3>
         <material-content style="height:400px;" class="material-theme-white">
@@ -34,95 +104,5 @@
             </material-list>
         </material-content>
 
-        <material-tabs selected="selectedIndex"   style="padding-left:0;">
-            <material-tab ng-disabled="moreData.challenges.length == 0" class="material-theme-white" >
-                <material-tab-label>
-                    <material-item>
-                        <material-item-content>
-                            <div class="material-tile-left">
-                                <i class="fa fa-trophy fa-2x"></i>
-                            </div>
-                            <div class="material-tile-content" style="text-align:left;">
-                                <span>created</span>
-                            </div>
-                        </material-item-content>
-                    </material-item>
-                </material-tab-label>
-            </material-tab>
-            <material-tab ng-disabled="moreData.followedChallenges.length == 0">
-                <material-tab-label>
-                    <material-item>
-                        <material-item-content>
-                            <div class="material-tile-left">
-                                <i class="fa fa-trophy fa-2x"></i>
-                            </div>
-                            <div class="material-tile-content" style="text-align:left;">
-                                <span>followed</span>
-                            </div>
-                        </material-item-content>
-                    </material-item>
-                </material-tab-label>
-            </material-tab>
-            <material-tab ng-disabled="moreData.projects.length == 0">
-                <material-tab-label>
-                    <material-item>
-                        <material-item-content>
-
-                            <div class="material-tile-left">
-                                <i class="fa fa-lightbulb-o fa-2x"></i>
-                            </div>
-                            <div class="material-tile-content" style="text-align:left;">
-                                <span>created</span>
-                            </div>
-                        </material-item-content>
-                    </material-item>
-                </material-tab-label>
-            </material-tab>
-            <material-tab ng-disabled="moreData.memberProjects.length == 0">
-                <material-tab-label>
-                    <material-item>
-                        <material-item-content>
-                            <div class="material-tile-left">
-                                <i class="fa fa-lightbulb-o fa-2x"></i>
-                            </div>
-                            <div class="material-tile-content" style="text-align:left;">
-                                <span>contribution</span>
-                            </div>
-                        </material-item-content>
-                    </material-item>
-                </material-tab-label>
-            </material-tab>
-            <material-tab ng-disabled="moreData.followedProjects.length == 0">
-                <material-tab-label>
-                    <material-item>
-                        <material-item-content>
-                            <div class="material-tile-left">
-                                <i class="fa fa-lightbulb-o fa-2x"></i>
-                            </div>
-                            <div class="material-tile-content" style="text-align:left;">
-                                <span>followed</span>
-                            </div>
-                        </material-item-content>
-                    </material-item>
-                </material-tab-label>
-            </material-tab>
-        </material-tabs>
-        <section class="animate-switch-container" ng-switch on="selectedIndex" style="height:300px; margin-left:10%;; margin-right: 10%;">
-            <div class="animate-switch blueArea" ng-switch-when="0">
-                <challenge-card ng-repeat="challenge in moreData.challenges" admin="true" challenge-id="challenge._id" inline-block></challenge-card>
-            </div>
-            <div class="animate-switch " ng-switch-when="1">
-                <challenge-card ng-repeat="challenge in moreData.followedChallenges" challenge-id="challenge._id" inline-block></challenge-card>
-            </div>
-            <div class="animate-switch greenArea" ng-switch-when="2">
-                <project-card ng-repeat="project in moreData.projects" admin="true" project-id="project._id" inline-block></project-card>
-            </div>
-            <div class="animate-switch grayArea" ng-switch-when="3">
-                <project-card ng-repeat="project in moreData.memberProjects" project-id="project._id" inline-block></project-card>
-            </div>
-            <div class="animate-switch grayArea" ng-switch-when="4">
-                <project-card ng-repeat="project in moreData.followedProjects" project-id="project._id" inline-block></project-card>
-            </div>
-        </section>
     </material-content>
 </section>
